--- a/SimpleWebServer/build.xml
+++ b/SimpleWebServer/build.xml
@@ -1,25 +1,22 @@
-<project name = "SimpleWebBrowser" default="cleanbuild" basedir=".">
+<project name = "SimpleWebBrowser" default="run" basedir=".">
 	<description>
 		build file to run code in SimpleWebSever
 	</description>
 	<property name="src" location="src/"/>
-	<property name="build" location="bin/"/>
+	<property name="build" location="www/"/>
 
 	<target name="clean" description="deletes all class files">
-		<delete dir="${build}"/>
+		<delete dir="www/bin"/>
 	</target>
 
-	<target name="build" description="compiles all java files to /bin">
-		<mkdir dir="${build}"/>
-		<javac srcdir="${src}" destdir="${build}"/>
+	<target name="build" description="compiles all java files to /www/bin">
+		<mkdir dir="www/bin"/>
+		<javac srcdir="${src}" destdir="www/bin"/>
 	</target>
 
-	<target name="cleanbuild" depends="clean,build"/>
-
-	<target name="run" description="launches SimpleWebServer on port 8085">
+	<target name="run" depends="clean,build" description="launches SimpleWebServer on port 8085">
 		<java classname="edu.nmsu.cs.webserver.WebServer" classpath="${build}" fork="true">
 			<arg value="8085"/>
 		</java>
 	</target>
 </project>
-
